--- a/css/base.css
+++ b/css/base.css
@@ -28,8 +28,8 @@
 
 body {
   font-family: "Lucida Grande", "DejaVu Sans", "Verdana", sans-serif;
-  font-size: 12px;
-  line-height: 1.8;
+  font-size: 13px;
+  line-height: 1.6;
   color: #262626;
 }
 
@@ -63,22 +63,23 @@ h3 {
 h1 {
   color: #3d72c9;
   font-size: 22px;
-  margin-bottom: 11px;
+  margin-bottom: 4px;
   font-weight: 800;
 }
 
 h2 {
-  font-size: 16px;
-  margin-top: 22px;
-  margin-bottom: 4px;
+  font-size: 20px;
+  margin-top: 21px;
+  margin-bottom: 3px;
   font-weight: 800;
+  color: #444547;
 }
 
 h3 {
   color: #3d72c9;
   font-size: 18px;
-  margin-top: 10px;
-  margin-bottom: 4px;
+  margin-top: 16px;
+  margin-bottom: 2px;
   font-weight: 800;
 }
 
@@ -98,17 +99,20 @@ code,
 
 pre {
   font-size: 12px;
+  font-weight: normal;
   line-height: 1.5;
   overflow: auto;
   margin: 1em 0;
 }
 
 span.pre {
+  font-size: 12px;
   background-color: #f0f0f0;
 }
 
 code {
-  font-size: 11px;
+  font-size: 12px;
+  color: #383838;
 }
 
 sub {
@@ -150,7 +154,7 @@ ul, ol {
 table {
   /* font-size: $fontSize - 2px; */
   text-align: left;
-  margin-bottom: 21.6px;
+  margin-bottom: 20.8px;
 }
 table th {
   font-weight: bold;
